<resources>

    <string name="app_name">Warisan Kita Chapter 4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="input_email">Masukkan alamat email</string>
    <string name="input_password">Masukkan password</string>

    <string name="register_string">Registrasi Akun</string>
    <string name="input_fullname">Nama Lengkap</string>
    <string name="input_nickname">Nama Panggilan</string>
    <string name="input_phone">Nomor Telepon</string>

    <string name="profile_string">Informasi Profil</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="delete_account">Hapus Akun</string>
    <string name="logout">Keluar</string>
    <string name="back_to_home">Kembali ke Halaman Utama"</string>

    <string name="change_password_string">Ubah Kata Sandi</string>
    <string name="input_old_password">Kata Sandi Lama</string>
    <string name="input_new_password">Kata Sandi Baru</string>
    <string name="save_change_password">Simpan Perubahan</string>
    <string name="back_to_profile">Kembali ke Halaman Profil</string>

</resources>