<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="40dp"
    android:paddingBottom="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/register_title_style"
        android:text="@string/profile_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_fullname"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/fullname_create"
        app:layout_constraintStart_toStartOf="@id/fullname_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/input_fullname"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nickname"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/nickname_create"
        app:layout_constraintStart_toStartOf="@id/nickname_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_nickname"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamat Email"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/email_create"
        app:layout_constraintStart_toStartOf="@id/email_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_email"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_phone"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/phone_create"
        app:layout_constraintStart_toStartOf="@id/phone_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_phone"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/phone_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:textSize="20sp"
        android:backgroundTint="#F31919"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/button_change"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        android:backgroundTint="#F31919"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/button_delete"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:textSize="20sp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>