<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="50dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/register_title_style"
        android:layout_marginTop="50dp"
        android:text="@string/change_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_old_password"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/old_password_create"
        app:layout_constraintStart_toStartOf="@id/old_password_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/input_old_password"
        style="@style/outline_box_style"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_new_password"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/new_password_create"
        app:layout_constraintStart_toStartOf="@id/new_password_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_new_password"
        style="@style/outline_box_style"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_change_password"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        app:layout_constraintTop_toBottomOf="@id/new_password_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back_to_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_profile"
        android:textSize="20sp"
        android:backgroundTint="#F31919"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/button_save_change"/>

</androidx.constraintlayout.widget.ConstraintLayout>