<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/register_title_style"
        android:text="@string/register_string"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_fullname"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/fullname_create"
        app:layout_constraintStart_toStartOf="@id/fullname_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/input_fullname"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nickname"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/nickname_create"
        app:layout_constraintStart_toStartOf="@id/nickname_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_nickname"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_email"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/email_create"
        app:layout_constraintStart_toStartOf="@id/email_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_email"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_phone"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/phone_create"
        app:layout_constraintStart_toStartOf="@id/phone_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_phone"
        style="@style/outline_box_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        style="@style/data_input_style"
        android:layout_marginBottom="-8dp"
        app:layout_constraintBottom_toTopOf="@id/password_create"
        app:layout_constraintStart_toStartOf="@id/password_create"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/input_password"
        style="@style/outline_box_style"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ViewFlipper
        android:id="@+id/flipper_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="20sp"
            android:backgroundTint="#F31919"
            android:layout_marginTop="40dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:progressBarStyleSmall"
            android:layout_gravity="center"/>
    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>